# LeagueForge-Tournament-Management-System

./: README.md  main.py  pyproject.toml  random.txt
alembic/: env.py
alembic/versions/: 64ccfccd6966_major_tables_modified.py  c4ece44f5237_adding_the_user_table.py  fcf4230a80bd_venue_venueavbailabitility_match_tables_.py
src/core/: config.py  security.py
src/database/: session.py
src/dependencies/: auth.py
src/model/: __init__.py  enum.py  match_result.py  matches.py  points.py  teams.py  user.py  venue.py  venue_availability.py
src/repository/: auth.py  match_result.py  matches.py  points.py  teams.py  user.py  venue.py
src/router/: auth.py  matches.py  teams.py  user.py  venue.py
src/schema/: auth.py  matches.py  points.py  teams.py  user.py  venue.py
src/service/: auth.py  matches.py  teams.py  user.py  venue.py
src/utils/: loggers.py
